# ai-mini-project

./: .env.example  .gitignore  README.md  pyproject.toml
data/eval/: .gitkeep  retrieval_eval.sample.json
data/knowledge_base/: .gitkeep
output/: ai-mini_output_3반_배석현+박나연.md  ai-mini_output_3반_배석현+박나연_project.md
tech_strategy/: __init__.py  config.py  design_artifact.py  errors.py  formatting.py  logging_utils.py  main.py  models.py  report_structure.py  report_template.py  resilience.py  retrieval_eval.py  state.py  state_contracts.py  supervisor.py  workflow.py
tech_strategy/services/: __init__.py  assessment_service.py  draft_service.py  web_search.py
